--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^1.1.4
+  date_field: ^5.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.27.0
+  cloud_firestore: ^4.15.8
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
